7. Moving @pictures in pictures_controller.rb into database

--- a/app/views/pictures/show.html.erb
+++ b/app/views/pictures/show.html.erb
@@ -1,5 +1,5 @@
 <!-- this show.html.erb file is the htt://website/pictures/<id#> part of the site.  It's very basic and will
 just show the single picture with values of what's inside @picture[:key] below. -->
 
-<p><%= @picture[:title] %>, <%= @picture[:artist] %></p>
-<img src="<%= @picture[:url] %>">
+<p><%= @picture.title %>, <%= @picture.artist %></p>
+<img src="<%= @picture.url %>">
