--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -3,6 +3,6 @@
 
 <!-- this snippet of HTML runs a ruby do loop to display each picture (@pictures.each) -->
 <% @pictures.each do |picture| %>
-    <p><%= picture[:title] %>, <%= picture[:artist] %></p>
-    <img src="<%= picture[:url] %>">
+    <p><%= picture.title %>, <%= picture.artist %></p>
+    <img src="<%= picture.url %>">
 <% end %>
