--- a/app/views/pictures/show.html.erb
+++ b/app/views/pictures/show.html.erb
@@ -1,5 +1,5 @@
 <!-- this show.html.erb file is the htt://website/pictures/<id#> part of the site.  It's very basic and will
 just show the single picture with values of what's inside @picture[:key] below. -->
-
+<%= link_to "Back to Pictures", pictures_url %> | <%= link_to "Edit", edit_picture_path(@picture) %>
 <p><%= @picture.title %>, <%= @picture.artist %></p>
 <img src="<%= @picture.url %>">
