--- a/app/views/pictures/show.html.erb
+++ b/app/views/pictures/show.html.erb
@@ -1,5 +1,10 @@
 <!-- this show.html.erb file is the htt://website/pictures/<id#> part of the site.  It's very basic and will
 just show the single picture with values of what's inside @picture[:key] below. -->
-<%= link_to "Back to Pictures", pictures_url %> | <%= link_to "Edit", edit_picture_path(@picture) %>
+
+<!-- data:confirm is the way of telling Rails you want to popup a dialog box and confirm with the user. method: lets
+Rails know what HTTP request to use on the URL. So the URL is /picture (which is denoted in this code with @picture),
+and the HTTP request is DELETE, which is obviously a different route from GET /pictures. -->
+<%= link_to "Back to Pictures", pictures_url %> | <%= link_to "Edit", edit_picture_path(@picture) %> | <%= link_to "Delete", @picture, method: :delete, data: {confirm: "Are you sure you want to delete this picture?"}  %>
+
 <p><%= @picture.title %>, <%= @picture.artist %></p>
 <img src="<%= @picture.url %>">
