--- a/app/views/pictures/new.html.erb
+++ b/app/views/pictures/new.html.erb
@@ -5,23 +5,7 @@
 <%= link_to "Back to Pictures", pictures_url %>
 
 
-<%= form_for @picture do |f| %>
-    <p>
-      <%= f.label "artist" %><br>
-      <%= f.text_field "artist" %>
-    </p>
-    <p>
-      <%= f.label "title" %><br>
-      <%= f.text_field "title" %>
-    </p>
-    <p>
-      <%= f.label "url" %><br>
-      <%= f.text_field "url" %>
-    </p>
-    <p>
-      <%= f.submit "Save" %>
-    </p>
-<% end %>
+<%= render 'picture_input_form' %>
 
 <!-- Now the form is for @picture, which comes from the model in the controller. In other words the form is now
 setup to work with the model. -->
