--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -8,7 +8,11 @@
 <!-- Notice we are using a helper, link_to, to make a link. The first parameter is the text and the second parameter
 is the URL clicking the text takes you to. In this case clicking on "Back to Pictures" takes you to the path
 pictures_url, which is /pictures. -->
-<% @pictures.each do |picture| %>
-    <p><%= picture.title %>, <%= picture.artist %></p>
-    <%= link_to image_tag(picture.url), "/pictures/#{picture.id}" %>
-<% end %>
+<h1>Most recent pictures</h1>
+<ul>
+  <% @most_recent_pictures.each do |picture| %>
+      <li>Title: <%= picture.title %></li>
+      <p>By: <%= picture.artist %></p>
+      <%= link_to image_tag(picture.url), "/pictures/#{picture.id}" %>
+  <% end %>
+</ul>
