--- a/app/views/pictures/_navlinks.html.erb
+++ b/app/views/pictures/_navlinks.html.erb
@@ -1,1 +1,3 @@
-<%= link_to "Back to Pictures", pictures_url %>| <%= link_to "Edit", edit_picture_path(@picture) %> | <%= link_to "Delete", @picture, method: :delete, data: {confirm: "Are you sure you want to delete this picture?"}  %>
+<%= link_to "Back to Pictures", pictures_url %>| <%= link_to "Edit", edit_picture_path(@picture) %> |
+<%= link_to "Delete", @picture, method: :delete, data: {confirm: "Are you sure you want to delete this picture?"}  %>
+| <%= link_to "New Picture", "/pictures/new" %>
